fixed white space below phone

--- a/webroot/css/redesign.css
+++ b/webroot/css/redesign.css
@@ -73,7 +73,7 @@
 
 
 #demo-mobile-wrapper{
-  min-height: 138vh;
+  min-height: 200vmin;
   width: 100vw;
 }
 
@@ -114,7 +114,6 @@
   width: 80vmin;
   margin: 2vmin 1.5vmin;
   position: absolute;
-  top: 16vh;
 }
 
 #demo-iframe #mobile-outer .image {
